--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
-## Assuming the .travis.yml file is in the project directory, and there is a separate sub-directory for each service
-## Use either `docker-compose` or individual `docker build` commands
+branches:
+  only:
+    - main
+language: node_js
+node_js:
+  - 16
+
+services:
+  - docker
+
 ## Build
   - docker build -t udagram-api-feed ./udagram-api-feed
   - docker build -t udagram-api-user ./udagram-api-user
@@ -20,4 +28,3 @@
   - docker push huydn6/udagram-api-user
   - docker push huydn6/udagram-frontend
   - docker push huydn6/reverseproxy
-## Do similar for other three images
