--- a/.travis.yml
+++ b/.travis.yml
@@ -8,19 +8,19 @@ node_js:
 services:
   - docker
 
+script:
 ## Build
   - docker build -t udagram-api-feed ./udagram-api-feed
   - docker build -t udagram-api-user ./udagram-api-user
   - docker build -t udagram-frontend ./udagram-frontend
   - docker build -t reverseproxy ./reverseproxy
-## Do similar for other three images
+
 ## Tagging
   - docker tag udagram-api-feed huydn6/udagram-api-feed:v1
   - docker tag udagram-api-user huydn6/udagram-api-user:v1
   - docker tag udagram-frontend huydn6/udagram-frontend:v1
   - docker tag reverseproxy huydn6/reverseproxy:v1
-## Do similar for other three images```
-```bash
+after_success:
 ## Push
 ## Assuming DOCKER_PASSWORD and DOCKER_USERNAME are set in the Travis repository settings
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
