--- a/.travis.yml
+++ b/.travis.yml
@@ -16,15 +16,15 @@ script:
   - docker build -t reverseproxy ./udagram-reverseproxy
 
 ## Tagging
-  - docker tag udagram-api-feed huydn6/udagram-api-feed:v1
-  - docker tag udagram-api-user huydn6/udagram-api-user:v1
-  - docker tag udagram-frontend huydn6/udagram-frontend:v1
-  - docker tag reverseproxy huydn6/reverseproxy:v1
+  - docker tag udagram-api-feed huydn6/udagram-api-feed:latest
+  - docker tag udagram-api-user huydn6/udagram-api-user:latest
+  - docker tag udagram-frontend huydn6/udagram-frontend:latest
+  - docker tag reverseproxy huydn6/reverseproxy:latest
 after_success:
 ## Push
 ## Assuming DOCKER_PASSWORD and DOCKER_USERNAME are set in the Travis repository settings
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push huydn6/udagram-api-feed
-  - docker push huydn6/udagram-api-user
-  - docker push huydn6/udagram-frontend
-  - docker push huydn6/reverseproxy
+  - docker push huydn6/udagram-api-feed:latest
+  - docker push huydn6/udagram-api-user:latest
+  - docker push huydn6/udagram-frontend:latest
+  - docker push huydn6/reverseproxy:latest
